--- a/app/src/main/res/layout/fragment_wizard_personal_data.xml
+++ b/app/src/main/res/layout/fragment_wizard_personal_data.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         style="@style/linear"
@@ -10,16 +10,29 @@
         <FrameLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
 
         <LinearLayout
             style="@style/linear"
-            android:padding="@dimen/pd_xxsmall"
             android:background="@color/white"
-            android:orientation="vertical">
-            <include
-                android:id="@+id/layout_date_gender"
-                layout="@layout/layout_date_gender" />
+            android:orientation="vertical"
+            android:padding="@dimen/pd_xxsmall">
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/birthday_date_wrapper"
+                style="@style/item">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/birthday_date"
+                    style="@style/edit_profile"
+                    android:focusable="false"
+                    android:hint="@string/birthdate"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.v7.widget.AppCompatSpinner
+                android:id="@+id/edit_gender"
+                style="@style/edit_profile"/>
         </LinearLayout>
     </LinearLayout>
 </layout>
