--- a/app/src/main/res/layout/fragment_wizard_personal_data.xml
+++ b/app/src/main/res/layout/fragment_wizard_personal_data.xml
@@ -16,7 +16,8 @@
             style="@style/linear"
             android:background="@color/white"
             android:orientation="vertical"
-            android:padding="@dimen/pd_xxsmall">
+            android:paddingLeft="@dimen/pd_xxsmall"
+            android:paddingRight="@dimen/pd_xxsmall">
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/birthday_date_wrapper"
@@ -30,9 +31,28 @@
 
             </android.support.design.widget.TextInputLayout>
 
-            <android.support.v7.widget.AppCompatSpinner
-                android:id="@+id/edit_gender"
-                style="@style/edit_profile"/>
+            <LinearLayout
+                style="@style/item"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/pd_xxxsmall"
+                android:paddingRight="@dimen/pd_xxxsmall">
+
+
+                <android.support.v7.widget.AppCompatTextView
+                    style="@style/text.small.gray"
+                    android:text="Пол"
+                    android:textSize="@dimen/ts_xsmall"/>
+
+                <android.support.v7.widget.AppCompatSpinner
+                    android:id="@+id/edit_gender"
+                    style="@style/edit_profile"/>
+
+                <!--<include layout="@layout/ag_separator"/>-->
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="3px"
+                    android:background="@color/black_lightest"/>
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </layout>
