--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,6 +25,7 @@
     <dimen name="pd_xxxsmall">5dp</dimen>
     <dimen name="pd_xxsmall">8dp</dimen>
     <dimen name="pd_xsmall">12dp</dimen>
+    <dimen name="pd_small">13dp</dimen>
     <dimen name="pd_xnormal">14dp</dimen>
     <dimen name="pd_normal">16dp</dimen>
     <dimen name="pd_xlarge">20dp</dimen>
