--- a/app/src/main/res/layout/fragment_wizard_flat.xml
+++ b/app/src/main/res/layout/fragment_wizard_flat.xml
@@ -15,6 +15,7 @@
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/social_status_wrapper"
+                android:visibility="gone"
                 style="@style/item">
 
                 <android.support.design.widget.TextInputEditText
