--- a/app/src/main/res/layout/fragment_custom_flat.xml
+++ b/app/src/main/res/layout/fragment_custom_flat.xml
@@ -33,21 +33,40 @@
                     android:layout_marginTop="@dimen/pd_xxsmall"
                     android:paddingLeft="@dimen/pd_xxxsmall"/>
 
-                <TextView
-                    android:id="@+id/areaLabel"
-                    style="@style/text.xsmall.green"
-                    android:layout_marginTop="@dimen/pd_xxsmall"
-                    android:paddingLeft="@dimen/pd_xxxsmall"
-                    android:text="@string/flat_area"
-                    android:visibility="gone"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="3px"
+                    android:layout_marginLeft="@dimen/pd_xxxsmall"
+                    android:layout_marginRight="@dimen/pd_xxxsmall"
+                    android:background="@color/black_lightest"/>
 
-                <Spinner
-                    android:id="@+id/areaSpinner"
-                    style="@style/item"
+                <LinearLayout
+                    android:id="@+id/area_layout"
+                    style="@style/linear"
                     android:layout_marginTop="@dimen/pd_xxsmall"
-                    android:clickable="false"
-                    android:paddingLeft="@dimen/pd_xxxsmall"
-                    android:visibility="gone"/>
+                    android:layout_marginBottom="@dimen/pd_xxsmall"
+                    android:visibility="visible">
+
+                    <TextView
+                        android:id="@+id/areaLabel"
+                        style="@style/text.xsmall.green"
+                        android:paddingLeft="@dimen/pd_xxxsmall"
+                        android:text="@string/flat_area"/>
+
+                    <Spinner
+                        android:id="@+id/areaSpinner"
+                        style="@style/item"
+                        android:layout_marginTop="@dimen/pd_xxsmall"
+                        android:clickable="false"
+                        android:paddingLeft="@dimen/pd_xxsmall"/>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="3px"
+                        android:layout_marginLeft="@dimen/pd_xxxsmall"
+                        android:layout_marginRight="@dimen/pd_xxxsmall"
+                        android:background="@color/black_lightest"/>
+                </LinearLayout>
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/street_wrapper"
