--- a/app/src/main/res/layout/fragment_achievement_tab_profile.xml
+++ b/app/src/main/res/layout/fragment_achievement_tab_profile.xml
@@ -10,9 +10,26 @@
     </data>
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/agUser_profile_list"
-        style="@style/item"
-        android:paddingLeft="@dimen/pd_xsmall"
-        android:paddingRight="@dimen/pd_xsmall"/>
+    <RelativeLayout
+        android:id="@+id/root"
+        style="@style/root">
+
+        <ProgressBar
+            android:id="@+id/progress"
+            style="@style/item"
+            android:layout_centerInParent="true"
+            android:visibility="visible"/>
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe"
+            style="@style/root">
+
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/agUser_profile_list"
+                style="@style/item"
+                android:paddingLeft="@dimen/pd_xsmall"
+                android:paddingRight="@dimen/pd_xsmall"/>
+        </android.support.v4.widget.SwipeRefreshLayout>
+    </RelativeLayout>
 </layout>
