--- a/app/src/main/res/layout/fragment_new_profile.xml
+++ b/app/src/main/res/layout/fragment_new_profile.xml
@@ -10,8 +10,7 @@
     </data>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        style="@style/root"
         android:fitsSystemWindows="true"
         android:orientation="vertical">
 
