внедрение UIComponentFragmentViewModel в AchievementTabFragmentVM

--- a/app/src/main/res/layout/item_achievement.xml
+++ b/app/src/main/res/layout/item_achievement.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="ru.mos.polls.newprofile.vm.AchievementVM"/>
+            type="ru.mos.elk.profile.Achievements"/>
 
         <variable
             name="listener"
