отладка работы бейджей друзей, вцелом отлажено, из-за работы сервисов наблюдается нестабильная работа

--- a/app/src/main/res/layout/friend_add_item.xml
+++ b/app/src/main/res/layout/friend_add_item.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data/>
 
@@ -20,7 +18,7 @@
             android:layout_width="@dimen/vs_xxsmall"
             android:layout_height="@dimen/vs_xxsmall"
             android:layout_margin="8dp"
-            tools:src="@drawable/plus" />
+            android:src="@drawable/plus" />
 
         <TextView
             style="@style/text.large.green"
