--- a/app/src/main/res/layout/friend_item.xml
+++ b/app/src/main/res/layout/friend_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <import
-            type="ru.mos.polls.friend.ui.FriendGuiUtils"/>
+            type="ru.mos.polls.friend.ui.utils.FriendGuiUtils"/>
         <variable
             name="viewModel"
             type="ru.mos.polls.rxhttp.rxapi.model.friends.Friend"/>
