--- a/app/src/main/res/layout/fragment_wizard_personal_data.xml
+++ b/app/src/main/res/layout/fragment_wizard_personal_data.xml
@@ -1,58 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        style="@style/linear"
-        android:background="@color/white"
-        android:orientation="vertical">
-
-        <FrameLayout
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+    <android.support.v4.widget.NestedScrollView style="@style/root">
 
         <LinearLayout
             style="@style/linear"
             android:background="@color/white"
-            android:orientation="vertical"
-            android:paddingLeft="@dimen/pd_xxsmall"
-            android:paddingRight="@dimen/pd_xxsmall">
+            android:orientation="vertical">
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/birthday_date_wrapper"
-                style="@style/item">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/birthday_date"
-                    style="@style/edit_profile"
-                    android:focusable="false"
-                    android:hint="@string/birthdate"/>
-
-            </android.support.design.widget.TextInputLayout>
+            <FrameLayout
+                android:id="@+id/container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
             <LinearLayout
-                style="@style/item"
+                style="@style/linear"
+                android:background="@color/white"
                 android:orientation="vertical"
-                android:paddingLeft="@dimen/pd_xxxsmall"
-                android:paddingRight="@dimen/pd_xxxsmall">
+                android:paddingLeft="@dimen/pd_xxsmall"
+                android:paddingRight="@dimen/pd_xxsmall">
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/birthday_date_wrapper"
+                    style="@style/item">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/birthday_date"
+                        style="@style/edit_profile"
+                        android:focusable="false"
+                        android:hint="@string/birthdate" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <LinearLayout
+                    style="@style/item"
+                    android:orientation="vertical"
+                    android:paddingLeft="@dimen/pd_xxxsmall"
+                    android:paddingRight="@dimen/pd_xxxsmall">
 
 
-                <android.support.v7.widget.AppCompatTextView
-                    style="@style/text.small.gray"
-                    android:text="Пол"
-                    android:textSize="@dimen/ts_xsmall"/>
+                    <android.support.v7.widget.AppCompatTextView
+                        style="@style/text.small.gray"
+                        android:text="Пол"
+                        android:textSize="@dimen/ts_xsmall" />
 
-                <android.support.v7.widget.AppCompatSpinner
-                    android:id="@+id/edit_gender"
-                    style="@style/edit_profile"/>
+                    <android.support.v7.widget.AppCompatSpinner
+                        android:id="@+id/edit_gender"
+                        style="@style/edit_profile" />
 
-                <!--<include layout="@layout/ag_separator"/>-->
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="3px"
-                    android:background="@color/black_lightest"/>
+                    <!--<include layout="@layout/ag_separator"/>-->
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="3px"
+                        android:background="@color/black_lightest" />
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 </layout>
