--- a/app/src/main/res/layout/fragment_user_tab_profile.xml
+++ b/app/src/main/res/layout/fragment_user_tab_profile.xml
@@ -17,57 +17,74 @@
             type="ru.mos.polls.newprofile.vm.AvatarPanelClickListener"/>
     </data>
 
-    <android.support.v4.widget.NestedScrollView
-        style="@style/root"
-        android:fillViewport="true">
 
-        <LinearLayout
-            style="@style/item.linear"
-            android:descendantFocusability="blocksDescendants"
-            android:gravity="top">
+    <RelativeLayout
+        style="@style/root">
 
-            <LinearLayout
-                style="@style/item"
-                android:background="@color/actionbar_background"
-                android:orientation="vertical"
-                android:paddingTop="@dimen/pd_normal">
+        <ProgressBar
+            android:id="@+id/progress"
+            style="@style/item"
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
 
-                <include
-                    android:id="@+id/agUser_avatar_panel"
-                    layout="@layout/layout_user_avatar_panel"
-                    bind:agUser="@{agUser}"
-                    bind:clickListener="@{clickListener}"/>
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe"
+            style="@style/root">
 
-                <include
-                    android:id="@+id/agUser_status_info_panel"
-                    layout="@layout/layout_user_status_info"
-                    bind:agUser="@{agUser}"/>
-            </LinearLayout>
+            <android.support.v4.widget.NestedScrollView
+                style="@style/root"
+                android:id="@+id/root"
+                android:fillViewport="true">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/agUser_profile_list"
-                android:paddingLeft="@dimen/pd_xsmall"
-                android:paddingRight="@dimen/pd_xsmall"
-                style="@style/item"/>
+                <LinearLayout
+                    style="@style/item.linear"
+                    android:descendantFocusability="blocksDescendants"
+                    android:gravity="top">
 
-            <RelativeLayout
-                style="@style/item.linear.horizontal"
-                android:padding="@dimen/pd_xsmall">
+                    <LinearLayout
+                        style="@style/item"
+                        android:background="@color/actionbar_background"
+                        android:orientation="vertical"
+                        android:paddingTop="@dimen/pd_normal">
 
-                <TextView
-                    style="@style/text.normal.black"
-                    android:layout_marginLeft="@dimen/pd_xsmall"
-                    android:text="Профиль виден всем"/>
+                        <include
+                            android:id="@+id/agUser_avatar_panel"
+                            layout="@layout/layout_user_avatar_panel"
+                            bind:agUser="@{agUser}"
+                            bind:clickListener="@{clickListener}"/>
 
-                <android.support.v7.widget.SwitchCompat
-                    android:id="@+id/agUser_profile_visibility"
-                    style="@style/wrap.centered"
-                    android:layout_alignParentRight="true"
-                    android:checked="true"
-                    android:textOff="@string/empty"
-                    android:textOn="@string/empty"
-                    android:thumbTextPadding="@dimen/pd_xlarge"/>
-            </RelativeLayout>
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+                        <include
+                            android:id="@+id/agUser_status_info_panel"
+                            layout="@layout/layout_user_status_info"
+                            bind:agUser="@{agUser}"/>
+                    </LinearLayout>
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/agUser_profile_list"
+                        style="@style/item"
+                        android:paddingLeft="@dimen/pd_xsmall"
+                        android:paddingRight="@dimen/pd_xsmall"/>
+
+                    <RelativeLayout
+                        style="@style/item.linear.horizontal"
+                        android:padding="@dimen/pd_xsmall">
+
+                        <TextView
+                            style="@style/text.normal.black"
+                            android:layout_marginLeft="@dimen/pd_xsmall"
+                            android:text="Профиль виден всем"/>
+
+                        <android.support.v7.widget.SwitchCompat
+                            android:id="@+id/agUser_profile_visibility"
+                            style="@style/wrap.centered"
+                            android:layout_alignParentRight="true"
+                            android:checked="true"
+                            android:textOff="@string/empty"
+                            android:textOn="@string/empty"
+                            android:thumbTextPadding="@dimen/pd_xlarge"/>
+                    </RelativeLayout>
+                </LinearLayout>
+            </android.support.v4.widget.NestedScrollView>
+        </android.support.v4.widget.SwipeRefreshLayout>
+    </RelativeLayout>
 </layout>
