--- a/app/src/main/res/values/social_secrets.xml
+++ b/app/src/main/res/values/social_secrets.xml
@@ -3,11 +3,9 @@
     <!-- FaceBook -->
     <string name="fb_app_id">458539567625458</string>
     <string name="fb_app_secret">a6614a2a2d14e478a7a445f6c5e4b936</string>
-
     <!-- VKontakte -->
-    <string name="vk_app_private_key">GUwng4kIMX2xxA0PbnXU</string>
     <integer name="com_vk_sdk_AppId">4296536</integer>
-
+    <string name="vk_app_private_key">GUwng4kIMX2xxA0PbnXU</string>
     <!-- Twitter -->
     <string name="tw_consumer_key">PnbeNhP3giScGJI6pPCA</string>
     <string name="tw_consumer_secret">MnJUX0WPeg4pYCWO3UDDRMIOpwRVW9JSBWU7vksN2xs</string>
@@ -16,4 +14,5 @@
     <string name="ok_app_id">1078245120</string>
     <string name="ok_app_key">CBAILFEBEBABABABA</string>
     <string name="ok_app_secret">1BEB11E95E0CAFA3DDD4D16F</string>
+    <string name="ok_host_name">ok1078245120</string>
 </resources>
